--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@angular/material/theming';
+@import './app/lib/colors.scss';
+
+@include mat-core();
+
+$ds-mat-primary: mat-palette($ds-primary, Main, Light, Dark);
+$ds-mat-accent: mat-palette($ds-accent, Main, Light, Dark);
+$ds-mat-warn: mat-palette($ds-red, Main, Light, Dark);
+$ds-mat-theme: mat-light-theme($ds-mat-primary, $ds-mat-accent, $ds-mat-warn);
+@include angular-material-theme($ds-mat-theme);
+
+
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+div {
+  font-family: Roboto, sans-serif;
+}
