--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="petanque-content">
 <mat-tab-group  backgroundColor="primary">
-  <mat-tab label="Joueurs"> Joueurs </mat-tab>
-  <mat-tab label="Parties" disabled> Parties </mat-tab>
-  <mat-tab label="Résumé"> Résumé </mat-tab>
+  <mat-tab label="Joueurs"> <app-players></app-players> </mat-tab>
+  <mat-tab label="Parties" disabled> <app-plays></app-plays> </mat-tab>
+  <mat-tab label="Résumé"> <app-summary></app-summary> </mat-tab>
 </mat-tab-group>
 </div>
