--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@
     color: white !important;
     font-weight: bold;
     text-transform: uppercase;
+    opacity: 1 !important;
 }
 
 .mat-tab-list {
