--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,1 +1,6 @@
-<p>players works!</p>
+<ag-grid-angular
+style="height: 70vh; margin: 2vw;" 
+class="ag-theme-alpine"
+[rowData]="rowData" 
+[columnDefs]="columnDefs">
+</ag-grid-angular>
