init centered grid

--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,6 +1,12 @@
 <ag-grid-angular
+#agGrid
+id="playerGrid"
 style="height: 70vh; margin: 2vw;" 
 class="ag-theme-alpine"
 [rowData]="rowData" 
-[columnDefs]="columnDefs">
+[columnDefs]="columnDefs"
+[defaultColDef]="defaultColDef"
+[pagination]="true"
+(gridReady)="onGridReady($event)"
+(firstDataRendered)="onFirstDataRendered($event)">
 </ag-grid-angular>
