--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -1,2 +1,8 @@
 
-
+.ag-header-group-cell-label {
+    justify-content: center !important;
+  }
+  
+.ag-header-cell-label {
+    justify-content: center !important;
+  }
