--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -6,3 +6,7 @@
 .ag-header-cell-label {
     justify-content: center !important;
   }
+.grid-controller {
+    display: flex;
+    justify-content: center;
+}
