init grid button

--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -16,7 +16,7 @@
         </ag-grid-angular>
     </div>
     <div id="gridController" class="grid-controller">
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onAddPlayer()">
             <mat-icon>person_add</mat-icon>
         </button> 
         <button mat-icon-button>
