--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -25,7 +25,7 @@
         <button mat-icon-button>
             <mat-icon>person_remove</mat-icon>
         </button> 
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onRemoveAll()">
             <mat-icon>delete_sweep</mat-icon>
         </button> 
     </div>
