--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -20,7 +20,7 @@
         <button mat-icon-button (click)="onAddPlayer()">
             <mat-icon>person_add</mat-icon>
         </button> 
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onRemovePlayer()">
             <mat-icon>person_remove</mat-icon>
         </button> 
         <button mat-icon-button (click)="onRemoveAll()">
