init step of game

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,5 +26,8 @@
 
 .plays-component{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 2vw;
 }
