--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -8,3 +8,14 @@
     margin: 1vh;
 }
 
+.card-play-over{
+    background-color: #E6F1CC;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius:5px;
+    border:solid;
+    border-width: 1px;
+    margin: 1vh;
+}
+
