--- a/src/app/plays/plays.component.html
+++ b/src/app/plays/plays.component.html
@@ -14,6 +14,12 @@
     </div>
 </div>
 
+<div class="next-game">
+  <button mat-fab color="accent" [disabled]="disableNextButton" (click)="goNext()">
+    <mat-icon>start</mat-icon>
+  </button>
+</div>
+
 
 
 
