--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -19,3 +19,14 @@
     margin: 1vh;
 }
 
+.card-play-locked{
+    background-color: #E0E3E9;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius:5px;
+    border:solid;
+    border-width: 1px;
+    margin: 1vh;
+}
+
