add match number

--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -30,3 +30,17 @@
     margin: 1vh;
 }
 
+.match-number-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.match-number-p{
+    align-self: center;
+    font-weight: bolder;
+    color: #505D74;
+}
+
+
+
