--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,22 @@
     border-radius:5px
 }
 
+
+.petanque-content-home{
+    margin: 15vh;
+    //border: solid;
+    //border-width: 1px;
+    border-color: $ds-yellow-90;
+    height: auto;
+    width: auto;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border-radius:5px;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    display: flex;
+}
+
 .mat-tab-list .mat-tab-labels .mat-tab-label-active {
     background-color: $ds-orange-60;
     color: white !important;
