--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,5 +1,6 @@
 
 <div id="player">
+    <p class="info">{{tournamentInfo.name}} - {{tournamentInfo.type}} - {{tournamentInfo.date}}</p>
    
     <div id="grid">
         <ag-grid-angular
