--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -10,3 +10,11 @@
     display: flex;
     justify-content: center;
 }
+
+.info{
+  text-align: end;
+  margin-right: 3vh;
+  font-family: cursive;
+  text-decoration: underline;
+  text-transform: capitalize;
+}
