--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="form-home">
-    <p style="font-style: 'italic'; font-weight: 'bold'; font-size: 'x-large';">Création d'un nouveau concours</p>
+    <p style="font-style: 'italic'; font-weight: 'bold'; font-size: 'x-large';font-family: cursive;">Création d'un nouveau concours</p>
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style" >
         <mat-button-toggle value="simple" (change)="onChangleType($event.value)" >Simple</mat-button-toggle>
         <mat-button-toggle value="doublette" (change)="onChangleType($event.value)" >Doublette</mat-button-toggle>
