--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,6 +10,8 @@
     margin: 0.5vw;
 }
 .mat-button-toggle-checked {
-    background-color: #fccfa8;
+    background-color: #ff9232;
     font-weight: bold;
+    color: white;
+    
 }
