--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,14 @@
 @import './lib/colors.scss';
 
 .petanque-content {
-    margin: 3vh;
+    //margin: 5vw;
     //border: solid;
     //border-width: 1px;
-    border-color: $ds-yellow-90;
+    //border-color: $ds-yellow-90;
     height: auto;
     width: auto;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    border-radius:5px
+    //box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    //border-radius:5px
 }
 
 
