--- a/src/app/plays/plays.component.html
+++ b/src/app/plays/plays.component.html
@@ -1,10 +1,17 @@
 
 <div>
-    <mat-form-field  appearance="outline">
+    <mat-form-field  appearance="outline" style="margin: 0.5vh;">
         <mat-label>PARTIE</mat-label>
         <mat-select [value]="defaultStep"  (selectionChange)="onGameChange($event)">
           <mat-option *ngFor="let step of gameSteps" [value]="step" [disabled]="disableGameOption(step)">{{step}}</mat-option>         
         </mat-select>
+      </mat-form-field>
+      <mat-form-field style="margin: 0.5vh;" appearance="outline">
+        <mat-label>Chercher</mat-label>
+        <input matInput placeholder="Chercher"  type="search" [(ngModel)]="filterText" (ngModelChange)="onFilterValueChange($event)" >
+        <button mat-icon-button matSuffix (click)="onFilterClick()">
+          <mat-icon>{{filterEmpty ? 'search' : 'cancel'}}</mat-icon>
+          </button>
       </mat-form-field>
 </div>
 
