--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="form-home">
-    <p style="font-style: 'italic'; font-weight: 'bold'; font-size: 'x-large';font-family: cursive;">Création d'un nouveau concours</p>
-    <p style="font-style: 'italic';  font-size: 'medium';font-family: cursive;">Bienvenue sur l'application de concours de pétanque en 4 parties!, veuillez rentrer les inforamtions suivantes</p>
+    <p style="font-style: 'italic'; font-weight: 'bold'; font-size: 'xxx-large';font-family: cursive;">Création d'un nouveau concours</p>
+    <p style="font-style: 'italic';  font-size: 'larger';font-family: cursive;">Bienvenue sur l'application de concours de pétanque en 4 parties! Veuillez rentrer les informations suivantes:</p>
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style" >
         <mat-button-toggle value="simple" (change)="onChangleType($event.value)" >Simple</mat-button-toggle>
         <mat-button-toggle value="doublette" (change)="onChangleType($event.value)" >Doublette</mat-button-toggle>
