--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,25 +1,28 @@
 
-<div id="player">
+<div class="player" id="player" >
     <p class="info">{{tournamentInfo.name}} - {{tournamentInfo.type}} - {{tournamentInfo.date}}</p>
     <div id="gridController" class="grid-controller">
-        <button matTooltip="Ajouter une équipe" mat-icon-button (click)="onAddPlayer()"[disabled]="!enableAddPlayer"  style="margin: 0 0.5vh 0 0">
+        <button matTooltip="Ajouter une équipe" matTooltipPosition="above" mat-icon-button (click)="onAddPlayer()"[disabled]="!enableAddPlayer"  style="margin: 0 0.5vh 0 0">
             <mat-icon class="app-icon">person_add</mat-icon>
         </button> 
-        <button mat-icon-button matTooltip="Supprimer une équipe" (click)="onRemovePlayer()" [disabled]="disableDeletePlayer"  style="margin: 0 0.5vh 0 0">
+        <button mat-icon-button matTooltip="Supprimer une équipe" matTooltipPosition="above" (click)="onRemovePlayer()" [disabled]="disableDeletePlayer"  style="margin: 0 0.5vh 0 0">
             <mat-icon class="app-icon" >person_remove</mat-icon>
         </button> 
-        <button mat-icon-button matTooltip="Réinitialiser le concours" (click)="onRemoveAll()" [disabled]="this.rowData.length==0" style="margin: 0 0.5vh 0 0" >
+        <button mat-icon-button matTooltip="Réinitialiser le concours"  matTooltipPosition="above" (click)="onRemoveAll()" [disabled]="this.rowData.length==0" style="margin: 0 0.5vh 0 0" >
             <mat-icon class="app-icon" >restart_alt</mat-icon>
         </button> 
-        <button matTooltip="Générer les parties" (click) = "onGenerateGames()" mat-icon-button [disabled]="!enableGametab || !enableGenerateGame" style="margin: 0 0.5vh 0 0">
-            <mat-icon class="app-icon" [ngStyle]="{'color': (!enableGametab || !enableGenerateGame) ? '#bfbfbf' : '#FF7700'}" >play_circle_filled</mat-icon>
+       
+    </div>
+    <div class="game-button">
+        <button   class = "start-game-button" (click) = "onGenerateGames()" matTooltip="Démarrer les parties"  matTooltipPosition="below" mat-raised-button [disabled]="!enableGametab || !enableGenerateGame" >
+            Générer les parties  <mat-icon class="app-icon" [ngStyle]="{'color': (!enableGametab || !enableGenerateGame) ? '#bfbfbf' : '#FF7700'}" >play_circle_filled</mat-icon>
         </button> 
     </div>
-    <div id="grid">
+    <div id="grid" >
         <ag-grid-angular
         #agGrid
         id="playerGrid"
-        style="height: 70vh; margin: 2vw;" 
+        style="height: 65vh; margin: 2vw;" 
         class="ag-theme-alpine"
         [rowData]="rowData" 
         [columnDefs]="columnDefs"
