--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -1,17 +1,17 @@
-
 .ag-header-group-cell-label {
-    justify-content: center !important;
-  }
-  
-.ag-header-cell-label {
-    justify-content: center !important;
-  }
-.grid-controller {
-    display: flex;
-    justify-content: center;
+  justify-content: center !important;
 }
 
-.info{
+.ag-header-cell-label {
+  justify-content: center !important;
+}
+
+.grid-controller {
+  display: flex;
+  justify-content: center;
+}
+
+.info {
   text-align: end;
   margin-right: 3vh;
   font-family: cursive;
@@ -21,6 +21,24 @@
 
 
 
-.app-icon{
+.app-icon {
   transform: scale(1.10);
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+}
+
+.game-button {
+  display: flex;
+  align-items: center;
+  align-self: center;
+}
+
+.start-game-button {
+  margin: 0 0.5vh 0 0;
+  border: solid;
+  border-width: 1px;
+  border-color: #FF7700;
 }
