--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  //font-size: 1.1rem;
 }
 
 *,
@@ -30,6 +31,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  font-size: 1rem;
 }
 
 div {
@@ -60,4 +62,9 @@ div {
 
 .mat-tooltip {
   font-size: 1rem !important;
+}
+
+.mat-button-toggle-group,
+.mat-input-element{
+  font-size: larger !important;
 }
