up text size and fix last minor bug

--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -8,7 +8,7 @@
         <button mat-icon-button matTooltip="Supprimer une équipe" matTooltipPosition="above" (click)="onRemovePlayer()" [disabled]="disableDeletePlayer"  style="margin: 0 0.5vh 0 0">
             <mat-icon class="app-icon" >person_remove</mat-icon>
         </button> 
-        <button mat-icon-button matTooltip="Réinitialiser le concours"  matTooltipPosition="above" (click)="onRemoveAll()" [disabled]="this.rowData.length==0" style="margin: 0 0.5vh 0 0" >
+        <button mat-icon-button matTooltip="Réinitialiser le concours"  matTooltipPosition="above" (click)="onRemoveAll()"  style="margin: 0 0.5vh 0 0" >
             <mat-icon class="app-icon" >restart_alt</mat-icon>
         </button> 
        
