--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="petanque-content" *ngIf="infoSet">
+<!--<div class="petanque-content" *ngIf="infoSet">
   <mat-tab-group backgroundColor="primary" (selectedIndexChange)="onTabChanged($event)">
     <mat-tab label="Joueurs"> <app-players></app-players> </mat-tab>
     <mat-tab label="Parties" [disabled]="!enableGames"> <app-plays class="plays-component"></app-plays> </mat-tab>
@@ -26,4 +26,5 @@
   <button matTooltip="Information" mat-icon-button>
     <mat-icon (click)="onClickHelp()" class="app-icon-help" style="color: #FF7700;">contact_support</mat-icon>
   </button>
-</div>
+</div> -->
+<app-pending></app-pending>
