--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
     //border-color: $ds-yellow-90;
     height: auto;
     width: auto;
+    background-color: lightgray;
     //box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     //border-radius:5px
 }
