--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,7 @@
     //border: solid;
     //border-width: 1px;
     border-color: $ds-yellow-90;
+    background-color: lightgray;
     height: auto;
     width: auto;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
