back to background

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,8 +7,8 @@
     //border-color: $ds-yellow-90;
     height: auto;
     width: auto;
-    background-color: lightgray;
-    //box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    // background-color: lightgray;
+    box-shadow: rgb(13, 14, 14) 0px 20px 30px -10px;
     //border-radius:5px
 }
 
@@ -18,10 +18,9 @@
     //border: solid;
     //border-width: 1px;
     border-color: $ds-yellow-90;
-    background-color: lightgray;
     height: auto;
     width: auto;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgb(13, 14, 14) 0px 20px 30px -10px;
     border-radius: 5px;
     justify-content: center;
     align-items: center;
