add version info for app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   <button matTooltip="Information" mat-icon-button>
     <mat-icon (click)="onClickInfo()" class="app-icon-help" style="color: #FF7700;">info</mat-icon>
   </button>
-  <button matTooltip="Information" mat-icon-button>
-    <mat-icon (click)="onClickHelp()" class="app-icon-help" style="color: #FF7700;">contact_support</mat-icon>
+  <button matTooltip="Contact" mat-icon-button>
+    <mat-icon (click)="onClickHelp()" class="app-icon-help" style="color: #FF7700;">contact_mail</mat-icon>
   </button>
 </div>
